--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="Styles.css" />
     <title>Herramientas de control de versiones | Grupo 6</title>
     <!--Desarrollado por:
-    - Gerbert Alexis Hernández Morales HM22051
+    - Alexis Hernández HM22051
     - José Roberto Zelada Orantes ZO23004
     - Cinthia Karina Umanzor Chávez UC23001
     -->
