--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <section id="sect1" class="sect">
       <div class ="sect1-overlay"></div>
-      <video src="assets/video/VR.mp4" autoplay="true" muted="true" loop="true" id="video_vr"></video>
+      <video src="https://www.youtube.com/watch?v=c_E0V4LHpcY" autoplay="true" muted="true" loop="true" id="video_vr"></video>
       <div class="vr_titulo"><h1>Realidad Virtual</h1></div>
     </section>
    
