--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <br>
     <div style="text-align: center;"class="container">
       <video width="1080" height="720" controls>
-          <source src="assets/video/" type="video/mp4">
+          <source src="assets/video/HCV.mp4" type="video/mp4">
         </video>
       </div>
         <br>
