--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <section id="sect1" class="sect">
       <div class ="sect1-overlay"></div>
       <video src="assets/video/VR.mp4" autoplay="true" muted="true" loop="true" id="video_vr"></video>
-      <div class="vr_titulo"><h1>Realidad Virtual</h1></div>
+      <div class="vr_titulo" id= "#Realidad_virtual"><h1>Realidad Virtual</h1></div>
     </section>
    
 <!--Sección 4 texto realidad virtual-->
