--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li> <a href="#Realidad_virtual" class="link">Realidad Virtual</a></li>
           <li> <a href="#ventajas" class="link">Ventajas de herramientas
             <br>de control de versiones</a></li>
-        <li class="link">video</li>
+        <li> <a href="#video_investigación" class="link">Video</a></li>
         
       </ul>
     </nav>
@@ -167,7 +167,7 @@
 
 <!--Sección video-->
 
-    <section class="video-container">  
+    <section class="video-container" id ="#video_investigación">  
       <h1>Video sobre la investigación.</h1>
       <br>
     <div style="text-align: center;"class="container">
