--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
 
 <!--Sección video-->
 
-    <section class="video-container" id ="#video_investigación">  
+    <section class="video-container" >  
       <h1>Video sobre la investigación.</h1>
       <br>
-    <div style="text-align: center;"class="container">
+    <div style="text-align: center;"class="container" id= "#video_investigación">
       <video width="1080" height="720" controls>
           <source src="assets/video/HCV.mp4" type="video/mp4">
         </video>
