--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
    
 <!--Sección 4 texto realidad virtual-->
 
-<section class="content-2" id="control_de_versiones">
+<section class="content-2" id="Realidad_Virtual">
   <div class="section__container">
             <h1>¿Qué es la Realidad Virtual?</h1>
             <br>
@@ -167,10 +167,10 @@
 
 <!--Sección video-->
 
-    <section class="video-container" >  
+    <section class="video-container"  id= "video_investigación">  
       <h1>Video sobre la investigación.</h1>
       <br>
-    <div style="text-align: center;"class="container" id= "#video_investigación">
+    <div style="text-align: center;"class="container" >
       <video width="1080" height="720" controls>
           <source src="assets/video/HCV.mp4" type="video/mp4">
         </video>
