--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
    
 <!--Sección 4 texto realidad virtual-->
 
-<section class="content-2" id="Realidad_Virtual">
+<section class="content-2" id="Realidad_virtual">
   <div class="section__container">
             <h1>¿Qué es la Realidad Virtual?</h1>
             <br>
