--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
     <!--Sección 3 realidad virtual-->
 
     <section id="sect1" class="sect">
-      <div class ="sect1-overlay"></div>
+      <div class ="sect1-overlay" id="Realidad_virtual"></div>
       <video src="assets/video/VR.mp4" autoplay="true" muted="true" loop="true" id="video_vr"></video>
       <div class="vr_titulo" id= "#Realidad_virtual"><h1>Realidad Virtual</h1></div>
     </section>
    
 <!--Sección 4 texto realidad virtual-->
 
-<section class="content-2" id="Realidad_virtual">
+<section class="content-2">
   <div class="section__container">
             <h1>¿Qué es la Realidad Virtual?</h1>
             <br>
